# bftbench

./: .envrc  .gitignore  README.md  crates.js  help.html  index.html  search-index.js  settings.html  shell.nix  source-files.js  src-files.js
.direnv/: flake-profile-1-link
.github/: dependabot.yml
ahash/: all.html  index.html  struct.AHasher.html  struct.RandomState.html  trait.CallHasher.html
aho_corasick/: all.html  enum.AhoCorasickKind.html  enum.Anchored.html  enum.ErrorKind.html  enum.MatchErrorKind.html  enum.MatchKind.html  enum.StartKind.html  index.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.BuildError.html  struct.Error.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Input.html  struct.Match.html  struct.MatchError.html  struct.PatternID.html  struct.PatternIDError.html  struct.Span.html  struct.StreamFindIter.html  trait.StateID.html
anstream/: all.html  enum.ColorChoice.html  fn.stderr.html  fn.stdout.html  index.html  macro.eprint.html  macro.eprintln.html  macro.panic.html  macro.print.html  macro.println.html  struct.AutoStream.html  struct.Buffer.html  struct.StripStream.html  trait.Lockable.html  trait.RawStream.html  type.Stderr.html  type.Stdout.html
anstyle/: all.html  enum.AnsiColor.html  enum.Color.html  index.html  struct.Ansi256Color.html  struct.EffectIter.html  struct.Effects.html  struct.Reset.html  struct.RgbColor.html  struct.Style.html
anstyle_parse/: all.html  index.html  struct.AsciiParser.html  struct.Params.html  struct.ParamsIter.html  struct.Parser.html  struct.Utf8Parser.html  trait.CharAccumulator.html  trait.Perform.html  type.DefaultCharAccumulator.html
anstyle_query/: all.html  fn.clicolor.html  fn.clicolor_force.html  fn.is_ci.html  fn.no_color.html  fn.term_supports_ansi_color.html  fn.term_supports_color.html  fn.truecolor.html  index.html
anyhow/: all.html  fn.Ok.html  index.html  macro.anyhow.html  macro.bail.html  macro.ensure.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
arraydeque/: all.html  index.html  struct.ArrayDeque.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  trait.RangeArgument.html
async_stream/: all.html  index.html  macro.stream.html  macro.try_stream.html
async_stream_impl/: all.html  index.html
async_trait/: all.html  attr.async_trait.html  index.html
atomic_waker/: all.html  index.html  struct.AtomicWaker.html
axum/: all.html  index.html  struct.Error.html  struct.Extension.html  struct.Router.html  trait.RequestExt.html  trait.RequestPartsExt.html  trait.ServiceExt.html  type.BoxError.html
axum_core/: all.html  index.html  struct.Error.html  trait.RequestExt.html  trait.RequestPartsExt.html  type.BoxError.html
base64/: all.html  constant.BCRYPT.html  constant.BINHEX.html  constant.CRYPT.html  constant.IMAP_MUTF7.html  constant.STANDARD.html  constant.STANDARD_NO_PAD.html  constant.URL_SAFE.html  constant.URL_SAFE_NO_PAD.html  enum.CharacterSet.html  enum.DecodeError.html  enum.DecodeSliceError.html  enum.EncodeSliceError.html  fn.decode.html  fn.decode_config.html  fn.decode_config_buf.html  fn.decode_config_slice.html  fn.decode_engine.html  fn.decode_engine_slice.html  fn.decode_engine_vec.html  fn.decoded_len_estimate.html  fn.encode.html  fn.encode_config.html  fn.encode_config_buf.html  fn.encode_config_slice.html  fn.encode_engine.html  fn.encode_engine_slice.html  fn.encode_engine_string.html  fn.encoded_len.html  index.html  struct.Config.html
bft_bench_core/: all.html  constant.UUID_SIZE.html  fn.run.html  index.html  sidebar-items.js
bft_bench_echo/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html
bft_bench_shortcircuit/: all.html  index.html  sidebar-items.js  struct.Reader.html  struct.ShortCircuitedBftBinding.html  struct.Writer.html
bitflags/: all.html  index.html  macro.bitflags.html  macro.bitflags_match.html  struct.Flag.html  trait.Bits.html  trait.Flags.html
bytes/: all.html  index.html  struct.Bytes.html  struct.BytesMut.html  struct.TryGetError.html  trait.Buf.html  trait.BufMut.html
cfg_if/: all.html  index.html  macro.cfg_if.html
clap/: all.html  enum.ArgAction.html  enum.ColorChoice.html  enum.ValueHint.html  index.html  macro.arg.html  macro.command.html  macro.value_parser.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Command.html  struct.Id.html  trait.Args.html  trait.CommandFactory.html  trait.FromArgMatches.html  trait.Parser.html  trait.Subcommand.html  trait.ValueEnum.html  type.Error.html
clap_builder/: all.html  enum.ColorChoice.html  index.html  macro.arg.html  macro.command.html  macro.value_parser.html  struct.Id.html  trait.Args.html  trait.CommandFactory.html  trait.FromArgMatches.html  trait.Parser.html  trait.Subcommand.html  trait.ValueEnum.html  type.Error.html
clap_derive/: all.html  derive.Args.html  derive.Parser.html  derive.Subcommand.html  derive.ValueEnum.html  index.html
clap_lex/: all.html  enum.SeekFrom.html  index.html  struct.ArgCursor.html  struct.ParsedArg.html  struct.RawArgs.html  struct.ShortFlags.html  trait.OsStrExt.html
colorchoice/: all.html  enum.ColorChoice.html  index.html
config/: all.html  enum.Case.html  enum.ConfigError.html  enum.FileFormat.html  enum.ValueKind.html  index.html  sidebar-items.js  struct.Config.html  struct.Environment.html  struct.File.html  (+9 more)
rust/bft-bench-aptos/: Cargo.toml
rust/bft-bench-aptos/src/: lib.rs
rust/bft-bench-core/: Cargo.toml
rust/bft-bench-core/src/: bft_binding.rs  config.rs  lib.rs  reader.rs  result.rs  stats.rs  worker.rs  writer.rs
rust/bft-bench-shortcircuit/: Benchmark.example.toml  Cargo.toml  README.md
rust/bft-bench-shortcircuit/src/: lib.rs
rust/bft-bench-shortcircuited/: Benchmark.toml  Cargo.toml
rust/bft-bench-shortcircuited/src/: lib.rs
rust/echo-grpc/: Benchmark.example.toml  Cargo.toml  README.md  Server.example.toml
rust/echo-grpc/proto/: service.proto
rust/fake-grpc/: Cargo.toml
rust/fake-grpc/proto/: service.proto
(+20072 files in other folders)
