[package]
name = "bft-bench-aptos"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
bft-bench-core = { path = "../bft-bench-core" }
async-trait = "0.1.58"
tokio = { version = "1.21.2", features = ["full"] }
uuid = { version = "1.2.0", features = ["v4"] }
rand = "0.7.3"
anyhow = "1.0.66"
once_cell = "1.16.0"
url = "2.3.1"
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
