[package]
name = "bft-bench-core"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
async-trait = "0.1.73"
bytes = "1.5.0"
histogram = "0.8.1"
log = "0.4.20"
rand = "0.8.5"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.4.1", features = ["v4"] }
