[package]
name = "bft-bench-core"
version = "0.0.1"
edition = "2024"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
histogram = "0.11.3"
log = "0.4.27"
rand = "0.9.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.16.0", features = ["v4"] }
