[package]
name = "bft-bench-shortcircuit"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
bft-bench-core = { path = "../bft-bench-core" }
bytes = "1.4.0"
clap = { version = "4.3.12", features = ["derive"] }
config = "0.13.3"
env_logger = "0.10.0"
log = "0.4.19"
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
