[package]
name = "bft-bench-shortcircuit"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
bft-bench-core = { path = "../bft-bench-core" }
bytes = "1.5.0"
clap = { version = "4.4.5", features = ["derive"] }
config = "0.13.3"
env_logger = "0.11.1"
log = "0.4.20"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["v4"] }
