[package]
name = "bft-bench-shortcircuit"
version = "0.0.1"
edition = "2024"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bft-bench-core = { path = "../bft-bench-core" }
bytes = "1.10.1"
clap = { version = "4.5.36", features = ["derive"] }
config = "0.15.11"
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4"] }
