[package]
name = "bft-bench-shortcircuited"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies.bft-bench-core]
path = "../bft-bench-core"

[dependencies.anyhow]
version = "1.0.66"

[dependencies.async-trait]
version = "0.1.58"

[dependencies.config]
version = "0.13.2"

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.10.0"

[dependencies.metrics]
version = "0.20.1"

[dependencies.tracing]
version="0.1.37"

[dependencies.tracing-subscriber]
version = "0.3.16"

[dependencies.opinionated_metrics]
version = "0.2.0"

[dependencies.tokio]
version = "1.21.2"
features = ["full"]
