[package]
name = "bft-bench-shortcircuited"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies.bft-bench-core]
path = "../bft-bench-core"

[dependencies.anyhow]
version = "1.0.66"

[dependencies.uuid]
version = "1.2.0"
features = ["v4"]

[dependencies.bytes]
version = "1.3.0"

[dependencies.async-trait]
version = "0.1.58"

[dependencies.config]
version = "0.13.2"

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.10.0"

[dependencies.tokio]
version = "1.21.2"
features = ["full"]

[dependencies.histogram]
version = "0.6.9"
