[package]
name = "bft-bench-shortcircuited"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
bft-bench-core = { path = "../bft-bench-core" }
anyhow = "1.0.66"
uuid = { version = "1.2.0", features = ["v4"] }
bytes = "1.3.0"
async-trait = "0.1.58"
config = "0.13.2"
log = "0.4"
env_logger = "0.10.0"
tokio = { version = "1.21.2", features = ["full"] }
histogram = "0.6.9"
