[package]
name = "echo-grpc"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
async-stream = "0.3.5"
bft-bench-core = { path = "../bft-bench-core" }
clap = { version = "4.0.32", features = ["derive"] }
config = "0.13.3"
env_logger = "0.10.0"
h2 = "0.3.20"
log = "0.4.19"
prost = "0.11.9"
serde = "1.0.171"
serde_derive = "1.0.171"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"
uuid = { version = "1.4.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.10.1"

[[bin]]
name = "echo-grpc-server"

[[bin]]
name = "bft-bench-echo"
