[package]
name = "echo-grpc"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
async-stream = "0.3.5"
bft-bench-core = { path = "../bft-bench-core" }
clap = { version = "4.4.5", features = ["derive"] }
config = "0.13.3"
env_logger = "0.10.0"
h2 = "0.4.0"
log = "0.4.20"
prost = "0.12.1"
serde = "1.0.188"
serde_derive = "1.0.188"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.10.1"
uuid = { version = "1.4.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.10.1"

[[bin]]
name = "echo-grpc-server"

[[bin]]
name = "bft-bench-echo"
