[package]
name = "echo-grpc"
version = "0.0.1"
edition = "2024"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
async-stream = "0.3.6"
bft-bench-core = { path = "../bft-bench-core" }
clap = { version = "4.5.36", features = ["derive"] }
config = "0.15.11"
env_logger = "0.11.8"
h2 = "0.4.9"
log = "0.4.27"
prost = "0.13.5"
serde = "1.0.219"
serde_derive = "1.0.219"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.13.1"
uuid = { version = "1.16.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "echo-grpc-server"

[[bin]]
name = "bft-bench-echo"
