[package]
name = "fake-grpc"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"

[build-dependencies]
tonic-build = "0.9.2"

[[bin]]
name = "fake-grpc-server"

[[bin]]
name = "bft-bench-fake"
