[package]
name = "fake-grpc"
version = "0.0.1"
edition = "2021"
authors = ["Fabio Tudone <fabtud@gmail.com>"]

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.0.32", features = ["derive"] }
config = "0.13.3"
env_logger = "0.10.0"
log = "0.4.17"
prost = "0.11.9"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"

[[bin]]
name = "fake-grpc-server"

[[bin]]
name = "bft-bench-fake"
